--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     	
-    <wb-module deploy-name="test">
+    <wb-module deploy-name="mycode">
         <wb-resource deploy-path="/" source-path="/src"/>
         		
-        <property name="context-root" value="test"/>
-        		
-        <property name="java-output-path" value="/test/target/classes"/>
+        <property name="java-output-path" value="/mycode/target/classes"/>
+        <property name="context-root" value="mycode"/>
         	
     </wb-module>
     
